--- a/photography.html
+++ b/photography.html
@@ -26,8 +26,8 @@
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon text" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu text-white" style="font-family: Moon Flower,MoonFlower; font-size: 35px;" >
-    <li><a href="#">Motion</a></li>
-    <li><a href="#">Photography</a></li>
+    <li><a href="motion.html">Motion</a></li>
+    <li><a href="photography.html">Photography</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </header>
@@ -51,21 +51,23 @@
 <!-- Delete from here to the next comment to add different content -->
 
 <!-- Carousel	 -->
+
+<div class="heroContainer">
 	<div class="hero w3-content w3-section">	
       <div class="mySlides"><img src="assets/images/photos/hero3.jpg"></div>
       <div class="mySlides"><img src="assets/images/photos/hero4.jpg"></div>
       <div class="mySlides"><img src="assets/images/photos/hero2.jpg"></div>
 	</div>
-
+</div>
 <!-- End Carousel -->
 <!-- Delete to this comment and add content in between -->
 
 <!-- Body -->
 
-<div class="container-xl mx-auto flex-col flex overflow bg-bottom" style="height: 100%;
+<div class="container-xl mx-auto flex-col flex overflow bg-bottom mt-2" style="height: 100%;
     background: linear-gradient(180deg, #ffffff 50%, #000000 50%);" alt="backgroundBreak">
 	<div class="container-sm h-auto md:container-xl mx-auto pb-2" alt="portrait">
-		<center><img src="assets/images/portrait.png" class="content-center h-full md:h-full"></center>
+		<center><img src="assets/images/portrait.png" id="portrait" class="content-center h-1/2 md:h-full"></center>
 	</div>
 	<div class="font-sans container block mx-auto text-white text-lg flex-col p-3" alt="aboutText" style="font-family: 'Roboto';">
 		<p class="">
@@ -156,6 +158,7 @@ $(document).ready(function(){
 	carousel();
 
 	function carousel() {
+		document.getElementById("mySlides").style.maxWidth = "100px";
 		var i;
 		var x = document.getElementsByClassName("mySlides");
 		for (i = 0; i < x.length; i++) {
@@ -163,7 +166,7 @@ $(document).ready(function(){
 		}
 		myIndex++;
 		if (myIndex > x.length) {myIndex = 1}    
-		x[myIndex-1].style.display = "block";  
+		x[myIndex-1].style.display = "inline-block";  
 		setTimeout(carousel, 2000);
 	}
 	</script>	
