--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
 <!-- Carousel	 -->
 
-	<div class="hero w3-content w3-section" style="max-width: 100%;">	
-      <div class="mySlides" style="max-width: 100%;"><img src="assets/images/photos/hero3.jpg"></div>
-      <div class="mySlides" style="max-width: 100%;"><img src="assets/images/photos/hero4.jpg"></div>
-      <div class="mySlides" style="max-width: 100%;"><img src="assets/images/photos/hero2.jpg"></div>
+	<div class="hero w3-content w3-section">	
+      <div class="mySlides"><img src="assets/images/photos/hero3.jpg"></div>
+      <div class="mySlides"><img src="assets/images/photos/hero4.jpg"></div>
+      <div class="mySlides"><img src="assets/images/photos/hero2.jpg"></div>
 	</div>
 <!-- End Carousel -->
 <!-- Delete to this comment and add content in between -->
