--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@
 
 </body>
 
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="jquery.min.js"></script>
 <script>
@@ -166,7 +164,7 @@ $(document).ready(function(){
 		}
 		myIndex++;
 		if (myIndex > x.length) {myIndex = 1}    
-		x[myIndex-1].style.display = "inline-block";  
+		x[myIndex-1].style.display = "block";  
 		setTimeout(carousel, 2000);
 	}
 	</script>	
