--- a/motion.html
+++ b/motion.html
@@ -46,13 +46,14 @@
 
 	</div>	
 
+<div class="max-w-full">
 <!-- End Header -->
 
 <!-- Delete from here to the next comment to add different content -->
 
 <!-- Carousel	 -->
 
-	<div class="hero w3-content w3-section ">	
+	<div class="hero w3-content w3-section">	
       <div class="mySlides"><img src="assets/images/photos/hero3.jpg"></div>
       <div class="mySlides"><img src="assets/images/photos/hero4.jpg"></div>
       <div class="mySlides"><img src="assets/images/photos/hero2.jpg"></div>
@@ -62,7 +63,7 @@
 
 <!-- Body -->
 
-<div class="container-xl mx-auto flex-col flex overflow bg-bottom mt-2" style="height: 100%;
+<div class="w-screen mx-auto flex-col flex overflow bg-bottom mt-2" style="height: 100%;
     background: linear-gradient(180deg, #ffffff 50%, #000000 50%);" alt="backgroundBreak">
 	<div class="container-sm h-auto md:container-xl mx-auto pb-2" alt="portrait">
 		<center><img src="assets/images/portrait.png" id="portrait" class="content-center h-1/2 md:h-full"></center>
@@ -86,7 +87,8 @@
 </div>
 <!-- End Body -->
 
-<!-- Footer -->
+</div>
+<!-- contact -->
 <div class="w-full h-full" alt id="contact">
 <div class="block w-full mx-auto">
 	<button class="block mt-24 mx-auto" style="border: none;
@@ -99,6 +101,7 @@
 		<a class="inline-block p-5" href="#"><img src="assets/images/vimeo.png"></a>
 		<a class="inline-block p-5" href="#"><img src="assets/images/youtube.png"></a>
 </div>
+<!-- footer -->
 	<div class="w-screen flex justify-between items-center" style="background-color: #000000;" alt="footerBar">
 		<div class="mx-auto flex" alt="logo">
 			<a href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="320" height="54" viewBox="0 0 320 54">
@@ -111,14 +114,12 @@
 	</footer>	
 </div>
 </div>
-<div>
+</div>
 
 <!-- End Footer -->
 
 </body>
 
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="jquery.min.js"></script>
 <script>
@@ -163,7 +164,7 @@ $(document).ready(function(){
 		}
 		myIndex++;
 		if (myIndex > x.length) {myIndex = 1}    
-		x[myIndex-1].style.display = "inline-block";  
+		x[myIndex-1].style.display = "block";  
 		setTimeout(carousel, 2000);
 	}
 	</script>	
