Gallery lightbox added

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 <!-- Carousel	 -->
 
 	<div class="hero w3-content w3-section">	
-      <div class="mySlides"><img src="assets/images/photos/hero3.jpg"></div>
-      <div class="mySlides"><img src="assets/images/photos/hero4.jpg"></div>
-      <div class="mySlides"><img src="assets/images/photos/hero2.jpg"></div>
+      <div class="mySlides"><img src="assets/images/photos/hero3.jpg" alt="Dead pigeon on a bed of yellow flowers."></div>
+      <div class="mySlides"><img src="assets/images/photos/hero4.jpg" alt="Colorful strings of origami cranes."></div>
+      <div class="mySlides"><img src="assets/images/photos/hero2.jpg" alt="A busy street with large buildings in Akihabara."></div>
 	</div>
 <!-- End Carousel -->
 <!-- Delete to this comment and add content in between -->
