--- a/photography.html
+++ b/photography.html
@@ -49,19 +49,27 @@
 <div class="max-w-full">
 <!-- End Header -->
 
-<!-- Delete from here to the next comment to add different content -->
+<!-- Gallery -->
+<link href="dist/lity.css" rel="stylesheet">
+<script src="vendor/jquery.js"></script>
+<script src="dist/lity.js"></script>
 
-<!-- Carousel	 -->
+<div class="photoGallery container">
+	<a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower">Image</a>
+<a href="#inline" data-lity>Inline</a>
+<a href="//www.youtube.com/watch?v=XSGBVzeBUbk" data-lity>iFrame Youtube</a>
+<a href="//vimeo.com/1084537" data-lity>iFrame Vimeo</a>
+<a href="//maps.google.com/maps?q=1600+Amphitheatre+Parkway,+Mountain+View,+CA" data-lity>Google Maps</a>
 
-	<div class="hero w3-content w3-section">	
-      <div class="mySlides"><img src="assets/images/photos/hero3.jpg"></div>
-      <div class="mySlides"><img src="assets/images/photos/hero4.jpg"></div>
-      <div class="mySlides"><img src="assets/images/photos/hero2.jpg"></div>
-	</div>
-<!-- End Carousel -->
-<!-- Delete to this comment and add content in between -->
+<div id="inline" style="background:#fff" class="lity-hide">
+Inline content
+</div>
+</div>
 
-<!-- Body -->
+
+
+
+<!-- about -->
 
 <div class="w-screen mx-auto flex-col flex overflow bg-bottom mt-2" style="height: 100%;
     background: linear-gradient(180deg, #ffffff 50%, #000000 50%);" alt="backgroundBreak">
@@ -85,7 +93,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
 </div>
-<!-- End Body -->
+
 
 </div>
 <!-- contact -->
