--- a/photography.html
+++ b/photography.html
@@ -17,8 +17,8 @@
 	<title>Steffi-Ann Mendoza</title>
 </head>
 <body>
-
-<header class="header p-3">
+<div class="w-full">
+<header class="header p-3 w-full">
   <a href="index.html" alt id="logo"><svg xmlns="http://www.w3.org/2000/svg" width="320" height="54" viewBox="0 0 320 54">
 	 				 <text id="Steffi-Ann_Mendoza" data-name="Steffi-Ann Mendoza" transform="translate(1 43)" fill="#fff" stroke="#fff" stroke-width="1" font-size="50" font-family="MoonFlower, Moon Flower" letter-spacing="0.05em"><tspan x="0" y="0">Steffi-Ann Mendoza</tspan></text>
 					</svg>
@@ -44,28 +44,60 @@
 			</a>
 		</nav>
 
-	</div>	
 
-<div class="max-w-full">
+
+<div class="w-full">
 <!-- End Header -->
 
 <!-- Gallery -->
 <link href="dist/lity.css" rel="stylesheet">
 <script src="vendor/jquery.js"></script>
 <script src="dist/lity.js"></script>
+	<script>
+		$(document).on('lity:ready', function(event, $lightbox, $triggeringElement) {
+	    $lightbox.find('.lity-content').append('<h2>' + $triggeringElement.data('title') + '</h2><p>' + $triggeringElement.data('desc') + '</p>');
+	});
+	</script>
 
-<div class="photoGallery container">
-	<a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower">Image</a>
-<a href="#inline" data-lity>Inline</a>
-<a href="//www.youtube.com/watch?v=XSGBVzeBUbk" data-lity>iFrame Youtube</a>
-<a href="//vimeo.com/1084537" data-lity>iFrame Vimeo</a>
-<a href="//maps.google.com/maps?q=1600+Amphitheatre+Parkway,+Mountain+View,+CA" data-lity>Google Maps</a>
+<div class="flex flex-wrap overflow-hidden w-full">
 
-<div id="inline" style="background:#fff" class="lity-hide">
-Inline content
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" title="Tile" desc="Small description goes here" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
+  <div class="w-full overflow-hidden md:w-1/2">
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+
 </div>
-</div>
-
 
 
 
@@ -103,7 +135,7 @@ Inline content
     outline: none;" onclick="toggle()"><img src="assets/images/email.png"></button>
 			<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" style="font-family: MoonFlower, Moon Flower; text-align: center;" id="email">steffiann.mendoza@gmail.com</p>
 
-	<div class="flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32" alt="socialMedia">
+	<div class="max-w-full flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32" alt="socialMedia">
 		<a class="inline-block p-5" href="#"><img src="assets/images/twitter.png"></a>
 		<a class="inline-block p-5" href="#"><img src="assets/images/linkdin.png"></a>
 		<a class="inline-block p-5" href="#"><img src="assets/images/vimeo.png"></a>
@@ -123,6 +155,7 @@ Inline content
 </div>
 </div>
 </div>
+</div>	
 
 <!-- End Footer -->
 
