--- a/photography.html
+++ b/photography.html
@@ -62,7 +62,7 @@
 <div class="flex flex-wrap overflow-hidden w-full">
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" title="Tile" desc="Small description goes here" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" lity-content="Tile" title="Small description goes here" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
  <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
