--- a/photography.html
+++ b/photography.html
@@ -56,48 +56,48 @@
 <script>
 $(document).on('lity:ready', function(event, $lightbox) {
     var $triggeringElement = $lightbox.opener();
-    $('.lity-content').append('<h2 class="text-white">' + $triggeringElement.data('title') + '</h2><p class="text-white">' + $triggeringElement.data('desc') + '</p>');
+    $('.lity-content').append('<h2 class="text-white text-center">' + $triggeringElement.data('title') + '</h2><p class="text-grey-light text-center">' + $triggeringElement.data('desc') + '</p>');
 });
 </script>
 
 
-<div class="flex flex-wrap overflow-hidden w-full">
+<div class="flex flex-wrap w-full mb-32">
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" ></a></div>
+ <a href="gallery/image19.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image19.JPG" ></a></div>
+
+  <div class="w-full overflow-hidden pb-30 md:w-1/2">
+ <a href="gallery/image18.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image18.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image04.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image15.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image06.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image06.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image07.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image07.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image08.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image08.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image09.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image09.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image10.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image10.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image11.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image11.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+ <a href="gallery/image12.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image12.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
-
-  <div class="w-full overflow-hidden md:w-1/2">
- <a href="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg" data-lity data-lity-desc="Photo of a flower"><img src="https://farm9.staticflickr.com/8642/16455005578_0fdfc6c3da_b.jpg"></a>  </div>
+  <div class="w-full overflow-hidden md:w-1/2"> 
+ <a href="gallery/image13.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image13.JPG"></a>  </div>
 
 </div>
 
@@ -137,7 +137,7 @@ $(document).on('lity:ready', function(event, $lightbox) {
     outline: none;" onclick="toggle()"><img src="assets/images/email.png"></button>
 			<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" style="font-family: MoonFlower, Moon Flower; text-align: center;" id="email">steffiann.mendoza@gmail.com</p>
 
-	<div class="max-w-full flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32" alt="socialMedia">
+	<div class="w-screen flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32" alt="socialMedia">
 		<a class="inline-block p-5" href="#"><img src="assets/images/twitter.png"></a>
 		<a class="inline-block p-5" href="#"><img src="assets/images/linkdin.png"></a>
 		<a class="inline-block p-5" href="#"><img src="assets/images/vimeo.png"></a>
