contact padding adjustment

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 </div>
 <!-- contact -->
-<div class="w-full h-full" alt id="contact">
+<div class="w-full h-full pt-32" alt id="contact">
 <div class="block w-full mx-auto">
 	<button class="block mt-24 mx-auto" style="border: none;
     outline: none;" onclick="toggle()"><img src="assets/images/email.png"></button>
