--- a/motion.html
+++ b/motion.html
@@ -90,7 +90,7 @@
 </div>
 <!-- contact -->
 <div class="w-full h-full" alt id="contact">
-<div class="block w-full mx-auto">
+<div class="block w-full mx-auto pt-32">
 	<button class="block mt-24 mx-auto" style="border: none;
     outline: none;" onclick="toggle()"><img src="assets/images/email.png"></button>
 			<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" style="font-family: MoonFlower, Moon Flower; text-align: center;" id="email">steffiann.mendoza@gmail.com</p>
