--- a/photography.html
+++ b/photography.html
@@ -60,45 +60,46 @@ $(document).on('lity:ready', function(event, $lightbox) {
 });
 </script>
 
+<div class="container mx-auto">
+<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 
-<div class="flex flex-wrap w-full mb-32">
-
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image19.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image19.JPG" ></a></div>
 
-  <div class="w-full overflow-hidden pb-30 md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image18.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image18.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image04.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image15.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image06.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image06.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image07.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image07.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image08.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image08.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image09.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image09.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image10.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image10.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image11.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image11.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2">
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image12.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image12.JPG"></a>  </div>
 
-  <div class="w-full overflow-hidden md:w-1/2"> 
+  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image13.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image13.JPG"></a>  </div>
 
+</div>
 </div>
 
 
@@ -131,13 +132,13 @@ $(document).on('lity:ready', function(event, $lightbox) {
 
 </div>
 <!-- contact -->
-<div class="w-full h-full" alt id="contact">
+<div class="w-full h-full pt-32" alt id="contact">
 <div class="block w-full mx-auto">
 	<button class="block mt-24 mx-auto" style="border: none;
     outline: none;" onclick="toggle()"><img src="assets/images/email.png"></button>
 			<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" style="font-family: MoonFlower, Moon Flower; text-align: center;" id="email">steffiann.mendoza@gmail.com</p>
 
-	<div class="w-screen flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32" alt="socialMedia">
+	<div class="flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32" alt="socialMedia">
 		<a class="inline-block p-5" href="#"><img src="assets/images/twitter.png"></a>
 		<a class="inline-block p-5" href="#"><img src="assets/images/linkdin.png"></a>
 		<a class="inline-block p-5" href="#"><img src="assets/images/vimeo.png"></a>
@@ -157,8 +158,6 @@ $(document).on('lity:ready', function(event, $lightbox) {
 </div>
 </div>
 </div>
-</div>	
-
 <!-- End Footer -->
 
 </body>
