--- a/photography.html
+++ b/photography.html
@@ -46,7 +46,7 @@
 
 
 
-<div class="w-full">
+<div class="max-w-full">
 <!-- End Header -->
 
 <!-- Gallery -->
@@ -64,49 +64,48 @@ $(document).on('lity:ready', function(event, $lightbox) {
 <div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image19.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image19.JPG" ></a></div>
+ <a href="gallery/image19.JPG" data-lity data-lity-desc="Four friends double exposed over flowers." data-title="Four Friends" data-desc="2016"><img src="gallery/image19.JPG" ></a></div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image18.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image18.JPG"></a>  </div>
+ <a href="gallery/image18.JPG" data-lity data-lity-desc="A cat and a headless bird double exposure" data-title="Untitled" data-desc="2016"><img src="gallery/image18.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image04.JPG"></a>  </div>
+ <a href="gallery/image04.JPG" data-lity data-lity-desc="Neon signs double exposed." data-title="Double" data-desc="2016"><img src="gallery/image04.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image15.JPG"></a>  </div>
+ <a href="gallery/image15.JPG" data-lity data-lity-desc="A boy sitting with his knees to his chest" data-title="John in Japan" data-desc="2017"><img src="gallery/image15.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image06.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image06.JPG"></a>  </div>
+ <a href="gallery/image06.JPG" data-lity data-lity-desc="A woman with red hair holding a gun to her lips." data-title="Maritza" data-desc="2016"><img src="gallery/image06.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image07.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image07.JPG"></a>  </div>
+ <a href="gallery/image07.JPG" data-lity data-lity-desc="Japanese train station double exposed with the train patrons." data-title="Japanese Train Station" data-desc="2017"><img src="gallery/image07.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image08.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image08.JPG"></a>  </div>
+ <a href="gallery/image08.JPG" data-lity data-lity-desc="Inside a Japanese train." data-title="Japanese Train Station 2" data-desc="2017"><img src="gallery/image08.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image09.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image09.JPG"></a>  </div>
+ <a href="gallery/image09.JPG" data-lity data-lity-desc="A train coming into the station." data-title="Japanese Train Station 3" data-desc="2017"><img src="gallery/image09.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image10.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image10.JPG"></a>  </div>
+ <a href="gallery/image10.JPG" data-lity data-lity-desc="A Japanese Shrine" data-title="Untitled" data-desc="2017"><img src="gallery/image10.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image11.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image11.JPG"></a>  </div>
+ <a href="gallery/image11.JPG" data-lity data-lity-desc="Japanese paper cranes." data-title="Cranes" data-desc="2017"><img src="gallery/image11.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image12.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image12.JPG"></a>  </div>
+ <a href="gallery/image12.JPG" data-lity data-lity-desc="A headless bird over a bed of flowers" data-title="Untitled" data-desc="2018"><img src="gallery/image12.JPG"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image13.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image13.JPG"></a>  </div>
+ <a href="gallery/image13.JPG" data-lity data-lity-desc="A busy street in Akihabara" data-title="Akihabara" data-desc="2017"><img src="gallery/image13.JPG"></a>  </div>
 
 </div>
 </div>
 
 
+<!-- Body -->
 
-<!-- about -->
-
-<div class="w-screen mx-auto flex-col flex overflow bg-bottom mt-2" style="height: 100%;
+<div class="w-screen mx-auto flex-col flex overflow bg-bottom pb-12 mt-2" style="height: 100%;
     background: linear-gradient(180deg, #ffffff 50%, #000000 50%);" alt="backgroundBreak">
 	<div class="container-sm h-auto md:container-xl mx-auto pb-2" alt="portrait">
 		<center><img src="assets/images/portrait.png" id="portrait" class="content-center h-1/2 md:h-full"></center>
@@ -128,7 +127,7 @@ $(document).on('lity:ready', function(event, $lightbox) {
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
 </div>
-
+<!-- End Body -->
 
 </div>
 <!-- contact -->
