--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <!-- Carousel	 -->
 
-	<div class="hero w3-content w3-section">	
+	<div class="hero w3-content w3-section pb-32">	
       <div class="mySlides"><img src="assets/images/photos/hero3.jpg" alt="Dead pigeon on a bed of yellow flowers."></div>
       <div class="mySlides"><img src="assets/images/photos/hero4.jpg" alt="Colorful strings of origami cranes."></div>
       <div class="mySlides"><img src="assets/images/photos/hero2.jpg" alt="A busy street with large buildings in Akihabara."></div>
@@ -63,7 +63,7 @@
 
 <!-- Body -->
 
-<div class="w-screen mx-auto flex-col flex overflow bg-bottom mt-2" style="height: 100%;
+<div class="w-screen mx-auto flex-col flex overflow bg-bottom pb-12 mt-2" style="height: 100%;
     background: linear-gradient(180deg, #ffffff 50%, #000000 50%);" alt="backgroundBreak">
 	<div class="container-sm h-auto md:container-xl mx-auto pb-2" alt="portrait">
 		<center><img src="assets/images/portrait.png" id="portrait" class="content-center h-1/2 md:h-full"></center>
