Video thumbnails added

--- a/motion.html
+++ b/motion.html
@@ -65,7 +65,7 @@ $(document).on('lity:ready', function(event, $lightbox) {
 <div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image19.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image19.JPG" ></a></div>
+ <a href="https://www.youtube.com/watch?v=1H7bqSu00og" data-lity data-title="Stop Motion Test" data-desc="2018"><img src="gallery/image19.JPG" ></a></div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="gallery/image18.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image18.JPG"></a>  </div>
