--- a/motion.html
+++ b/motion.html
@@ -65,40 +65,31 @@ $(document).on('lity:ready', function(event, $lightbox) {
 <div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=1H7bqSu00og" data-lity data-title="Stop Motion Test" data-desc="2018"><img src="gallery/image19.JPG" ></a></div>
+ <a href="https://www.youtube.com/watch?v=1H7bqSu00og" data-lity data-title="Stop Motion Test" data-desc="2018"><img src="motionthumb/thumb1.jpg" ></a></div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image18.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image18.JPG"></a>  </div>
+ <a href="https://www.youtube.com/watch?v=a0UuivpQo28" data-lity data-title="Outside" data-desc="Cinematographer, Editor, SFX"><img src="motionthumb/thumb2.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image04.JPG"></a>  </div>
+ <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb3.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image15.JPG"></a>  </div>
+ <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb4.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image06.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image06.JPG"></a>  </div>
+ <a href="gallery/image06.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb5.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image07.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image07.JPG"></a>  </div>
+ <a href="gallery/image07.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb6.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image08.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image08.JPG"></a>  </div>
+ <a href="gallery/image08.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb7.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image09.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image09.JPG"></a>  </div>
+ <a href="gallery/image09.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb8.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image10.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image10.JPG"></a>  </div>
-
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image11.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image11.JPG"></a>  </div>
-
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image12.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image12.JPG"></a>  </div>
-
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image13.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="gallery/image13.JPG"></a>  </div>
+ <a href="gallery/image10.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb9.jpg"></a>  </div>
 
 </div>
 </div>
